# simple-graph

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  deps.yml  release.yml
benches/: benchmarks.rs  vs_petgraph.rs
docs/superpowers/plans/: 2026-04-07-production-readiness.md  2026-04-07-scientific-computing-graph.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_edge_list.rs  fuzz_matrix_market.rs
src/: csr.rs  graph.rs  iter.rs  lib.rs  simple_graph.rs
src/algo/: bfs.rs  dfs.rs  mod.rs  shortest_path.rs
src/io/: edge_list.rs  matrix_market.rs  mod.rs
