[package]
name = "simple-graph"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Lightweight undirected graph with sorted adjacency lists, modeled on Graphs.jl"

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
rand = { version = "0.10", optional = true }

[dev-dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }

[features]
default = ["serde"]
serde = ["dep:serde"]
rand = ["dep:rand"]
